--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.1",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@tailwindcss/forms": "^0.5.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "bootstrap-icons": "^1.10.2",
     "mdb-react-ui-kit": "^5.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
@@ -17,10 +21,12 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.40.0",
     "react-icons": "^4.6.0",
+    "react-moving-text": "^0.0.7",
     "react-router": "^5.3.3",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
+    "sass": "^1.56.1",
     "styled-components": "^5.3.6",
     "sweetalert2": "^11.6.8",
     "sweetalert2-react-content": "^5.0.7",
