--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,7 @@
     "react-moving-text": "^0.0.7",
     "react-router": "^5.3.3",
     "react-router-dom": "^5.3.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^9.0.8",
     "sass": "^1.56.1",
     "styled-components": "^5.3.6",
